@@ -55,26 +55,8 @@ namespace LHQ.App
             _appFileName = Assembly.GetExecutingAssembly().Location;
             
             VelopackApp.Build()
-                .OnAfterInstallFastCallback(_ =>
-                    {
-                        try
-                        {
-                            var location = ShortcutLocation.AppRoot;
-                            new Shortcuts().CreateShortcutForThisExe(location);
-                        }
-                        catch
-                        {
-                            // NOTE: Ignore exceptions
-                        }
-                    })
-                .OnFirstRun(_ =>
-                    {
-                        var logger = VelopackLocator.Current.Log;
-                        var shortcutsApi = new Shortcuts();
-                        var location = ShortcutLocation.AppRoot;
-                        logger.Log(VelopackLogLevel.Information, $"Creating shortcut for: {VelopackLocator.Current.ThisExeRelativePath} on {location} (OnFirstRun)");
-                        shortcutsApi.CreateShortcutForThisExe(location);
-                    })
+                .OnAfterInstallFastCallback(_ => VelopackService.AfterInstall())
+                .OnFirstRun(_ => VelopackService.FirstRun())
                 .Run();
 
             var application = new App();
