@@ -1,0 +1,16 @@
+{
+  "$schema": "http://json.schemastore.org/vsix-publish",
+  "categories": [
+    "build",
+    "coding"
+  ],
+  "identity": {
+    "internalName": "lhqeditorvs2022"
+  },
+  "overview": "README.md",
+  "priceCategory": "free",
+  "publisher": "scalehqsolutions",
+  "private": false,
+  "qna": true,
+  "repo": "https://github.com/psulek/lhqeditor"
+}
