@@ -203,7 +203,7 @@
 
                 <p style="font-size: larger;">
                     <b>Localization HQ Editor</b> is WYSIWYG editor extension for Visual Studio
-                    (2015 / 2017 / 2019 / 2022).
+                    (2015 / 2017 / 2019 / 2022 / 2026).
                 </p>
                 <p style="font-size: larger;">
                     Manage all localizable string resources, translate to
@@ -263,9 +263,9 @@
                                 <li>
                                     <a href="https://marketplace.visualstudio.com/items?itemName=scalehqsolutions.lhqeditorvs2022"
                                         target="_blank">
-                                        LHQ Editor extension for VS 2022
+                                        LHQ Editor extension for VS 2022 / 2026
                                     </a><br />
-                                    Install required <b>Localization HQ Editor</b> extension into Visual Studio 2022
+                                    Install required <b>Localization HQ Editor</b> extension into Visual Studio 2022 / 2026
                                 </li>
                                 <li>
                                     <a href="https://www.nuget.org/profiles/scalehqsolutions" target="_blank">
