@@ -8,6 +8,10 @@
 - New modern generator now using 'V8' JS engine instead of 'Chakra'
   - This means that the code generation is now faster and more reliable
   - The new engine is also more compatible with the latest JavaScript features
+- upgraded model version to v3
+  - more information: https://github.com/psulek/lhqeditor/wiki/LHQ-Model-v3-Changes
+  - notable changes: https://github.com/psulek/lhqeditor/wiki/LHQ-Model-v3-Changes#notable-changes
+  - breaking changes: https://github.com/psulek/lhqeditor/wiki/LHQ-Model-v3-Changes#breaking-changes
 - Read more about [LHQ applications](https://github.com/psulek/lhqeditor/wiki/LHQ-Editor-Applications)
 
 2025.2
